# dts204

./: DTS202.ipynb  data.dvc  dts204.ipynb  main.py  pyproject.toml
data/: DTS_202_Dataset.xlsx
